--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Yiwei Liao (ÁÎÒåÎ°)</h1>
+<h1>Yiwei Liao (廖义伟)</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="mypic.png" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
